--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-	<title>WEBGi Jewelry Landing Page Demo</title>
-	<meta name="description" content="Jewelry landing page for product visualization and configuration using WEBGi - by Neotix">
+	<title>Pranvi Jewels</title>
+	<meta name="description" content="Jewelry landing page for product visualization and configuration">
 
 	<meta property="og:url" content="https://webgi-jewelry.vercel.app/">
 	<meta property="og:type" content="website">
@@ -45,7 +45,7 @@
 
 	<section class="header">
 		<div class="header--container">
-			<h1 class="header--brand">MANCINI & CO.</h1>
+			<h1 class="header--brand">Pranvi Jewels</h1>
 			<ul class="header--menu">
 				<li class="music--control">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -75,9 +75,9 @@
 	<section class="section cam-view-1">
 		<div class="hero--container">
 			<div class="hero--content">
-				<h1>Unique<br>Jewelry</h1>
+				<h1>Pranvi<br>Jewels</h1>
 				<div class="hero--text">
-					<p>Customize your unique ring with graphic angles and pure lines that combine to create the pure beauty of the collection.</p>
+					<p>Customize your unique ring to create the pure beauty & personality.</p>
 					<button tabindex="-1" class="button button-scroll">
 						Start now
 						<svg width="46" height="46" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M23 42.2a19.2 19.2 0 1 0 0-38.4 19.2 19.2 0 0 0 0 38.4Z" stroke="#52322B" stroke-linecap="round" stroke-linejoin="round"/><path d="m15.3 23 7.7 7.7 7.7-7.7M23 15.3v15.4" stroke="#52322B" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -108,7 +108,7 @@
 					<h2>created to last</h2>
 					<h1>For<br>ever</h1>
 				</div>
-				<p>Customize your unique ring with graphic angles and pure lines that combine to create the pure beauty of the collection.</p>
+				<p>Customize your unique ring to create the pure beauty & personality.</p>
 			</div>
 		</div>
 	</section>
